Add footer component define navigation menu functionality

--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-    <title>Svelte app</title>
+    <title>Covid19 Info</title>
 
     <!-- fonts -->
     <link rel="stylesheet" href="/fonts/icofont/icofont.min.css" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500&display=swap"
       rel="stylesheet"
     />
 
