--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,13 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://api.mapbox.com/mapbox-gl-js/v1.8.1/mapbox-gl.css"
+      rel="stylesheet"
+    />
 
     <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="stylesheet" href="/vendor/bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="/global.css" />
     <link rel="stylesheet" href="/build/bundle.css" />
 
